--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <section class="main-section">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="order-btn">Order Service</button>
+          <button type="button" class="btn">Order Service</button>
         </div>
       </section>
 
@@ -448,7 +448,110 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-wrap">
+          <p class="dscr">Subscribe</p>
+          <form class="footer-form" name="subscribe">
+            <label class="label-sub" for="sub">
+              <input class="subscribe-input" type="email" id="sub" name="sub" placeholder="E-mail"></input>
+            </label>
+            <button class="btn btn-sub">Subscribe 
+              <svg class="icon-plane" width="24" height="24">
+                <use href="./images/icons.svg#plane"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+
+    <!-- Modal -->
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="modal-btn" type="button">
+          <svg class="modal-btn-icon" width="8" height="8">
+            <use href="./images/icons.svg#close"></use>
+          </svg>
+        </button>
+        <p class="modal-caption">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="modal-form" name="review">
+          <div class="modal-form-field">
+            <label class="modal-form-label" for="user-name">Name</label>
+            <div class="modal-form-wrapper">
+              <input
+                class="modal-form-input"
+                type="text"
+                id="user-name"
+                name="user-name"
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#person"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-form-field">
+            <label class="modal-form-label" for="user-phone">Phone</label>
+            <div class="modal-form-wrapper">
+              <input
+                class="modal-form-input"
+                type="tel"
+                id="user-phone"
+                name="user-phone"
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-form-field">
+            <label class="modal-form-label" for="user-email">Email</label>
+            <div class="modal-form-wrapper">
+              <input
+                class="modal-form-input"
+                type="text"
+                id="user-email"
+                name="user-email"
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#email"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-form-field">
+            <label for="user-message" class="modal-form-label"></label>
+            <textarea
+              class="modal-form-message"
+              name="user-message"
+              id="user-message"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+
+          <div class="modal-form-agremeent">
+            <input
+              class="visually-hidden"
+              type="checkbox"
+              name="user-agremeent"
+              id="user-agremeent"
+            />
+            <label class="modal-form-agremeent-text" for="user-agremeent">
+              <span class="modal-form-checkbox">
+                <svg class="modal-form-checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#vector"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="modal-form-link">Privacy Policy</a></label
+            >
+          </div>
+
+          <button class="btn agremeent-btn" type="button">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
