--- a/index.html
+++ b/index.html
@@ -452,9 +452,16 @@
           <p class="dscr">Subscribe</p>
           <form class="footer-form" name="subscribe">
             <label class="label-sub" for="sub">
-              <input class="subscribe-input" type="email" id="sub" name="sub" placeholder="E-mail"></input>
+              <input
+                class="subscribe-input"
+                type="email"
+                id="sub"
+                name="sub"
+                placeholder="E-mail"
+              />
             </label>
-            <button class="btn btn-sub">Subscribe 
+            <button class="btn btn-sub" type="submit">
+              Subscribe
               <svg class="icon-plane" width="24" height="24">
                 <use href="./images/icons.svg#plane"></use>
               </svg>
@@ -522,11 +529,11 @@
           </div>
 
           <div class="modal-form-field">
-            <label for="user-message" class="modal-form-label"></label>
+            <label for="user-comment" class="modal-form-label">Comment</label>
             <textarea
               class="modal-form-message"
-              name="user-message"
-              id="user-message"
+              name="user-comment"
+              id="user-comment"
               placeholder="Text input"
             ></textarea>
           </div>
@@ -535,10 +542,11 @@
             <input
               class="visually-hidden"
               type="checkbox"
-              name="user-agremeent"
-              id="user-agremeent"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
             />
-            <label class="modal-form-agremeent-text" for="user-agremeent">
+            <label class="modal-form-agremeent-text" for="user-privacy">
               <span class="modal-form-checkbox">
                 <svg class="modal-form-checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#vector"></use>
