before the third sending for checking

--- a/index.html
+++ b/index.html
@@ -497,7 +497,6 @@
               </svg>
             </div>
           </div>
-
           <div class="modal-form-field">
             <label class="modal-form-label" for="user-phone">Phone</label>
             <div class="modal-form-wrapper">
@@ -528,7 +527,7 @@
             </div>
           </div>
 
-          <div class="modal-form-field">
+          <div class="modal-form-field-comment">
             <label for="user-comment" class="modal-form-label">Comment</label>
             <textarea
               class="modal-form-message"
